# pentbox

./: .dockerignore  .gitignore  FAISABILITE.md  INSTALL.md  README.md  install.sh  pyproject.toml
.github/workflows/: build.yml  test.yml
assets/: .gitkeep  entrypoint.sh  history-templates  pentbox-desktop  pentbox-run  pentbox-shell  pentbox-vpn
assets/menu/applications/: pentbox-GetNPUsers.py.desktop  pentbox-GetUserSPNs.py.desktop  pentbox-certipy.desktop  pentbox-coercer.desktop  pentbox-dirb.desktop  pentbox-dnsrecon.desktop  pentbox-enum4linux-ng.desktop  pentbox-gobuster.desktop  pentbox-hashcat.desktop  pentbox-hydra.desktop  pentbox-john.desktop  pentbox-ldapdomaindump.desktop  pentbox-ldapsearch.desktop  pentbox-masscan.desktop  pentbox-medusa.desktop  pentbox-mitm6.desktop  pentbox-nikto.desktop  pentbox-nmap.desktop  pentbox-nxc.desktop  pentbox-proxychains4.desktop  pentbox-secretsdump.py.desktop  pentbox-shell.desktop  pentbox-smbclient.desktop  pentbox-snmpwalk.desktop  pentbox-sqlmap.desktop  pentbox-tcpdump.desktop  pentbox-wfuzz.desktop  pentbox-whatweb.desktop  pentbox-whois.desktop
assets/menu/desktop-directories/: pentbox-ad.directory  pentbox-misc.directory  pentbox-pwd.directory  pentbox-recon.directory  pentbox-web.directory  pentbox.directory
assets/menu/xfce-applications-merged/: pentbox.menu
assets/skel/: .tmux.conf  .zshrc
assets/skel/.config/menus/: xfce-applications.menu
assets/skel/.config/xfce4/xfconf/xfce-perchannel-xml/: xfwm4.xml  xsettings.xml
images/: blackarch.dockerfile  debian.dockerfile  kali.dockerfile
src/pentbox/: __init__.py  cli.py  config.py  container.py
tests/: test_cli.py  test_config.py  test_container.py
