[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentbox"
version = "0.1.0"
description = "Environnement de hacking conteneurisé, façon Exegol — maison, auto-hébergé, sans paywall."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Nicolas" }]
keywords = ["pentest", "docker", "security", "exegol", "hacking", "redteam"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "docker>=7.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",   # backport de tomllib pour 3.9/3.10
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pentbox = "pentbox.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pentbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
